...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/half_margin"
            android:hint="@string/category_name"
            style="@style/Widget.TrainInventory.TextInputLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addCategory_saveBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addCategory_editCatName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapWords"
                android:text="@{chosenCategory.categoryName}" />
        </com.google.android.material.textfield.TextInputLayout>
...
