...
            style="@style/name_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:text="@{item.categoryName}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/category_item_edit_icon"
            app:layout_constraintStart_toEndOf="@+id/category_item_number"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Vagon" />

        <ImageView
            android:id="@+id/category_item_train_icon"
            android:layout_width="@dimen/brand_item_icon_dim"
            android:layout_height="@dimen/brand_item_icon_dim"
            android:layout_marginEnd="@dimen/margin_standard"
            android:background="@drawable/button_state_selector"
            android:contentDescription="@string/cd_category_item_train_btn"
            android:onClick="@{(theView) ->  itemClick.onCategoryItemClicked(theView, item)}"
...
