...
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/trainListFragment">

    <fragment
        android:id="@+id/categoryListFragment"
        android:name="com.canli.oya.traininventoryroom.ui.categories.CategoryListFragment"
        android:label="@string/all_categories">
        <action
            android:id="@+id/action_categoryListFragment_to_filterTrainFragment"
            app:destination="@id/filterTrainFragment" />
    </fragment>
...
            android:name="excelFileUri"
            app:argType="string" />
    </dialog>
    <fragment
        android:id="@+id/filterTrainFragment"
        android:name="com.canli.oya.traininventoryroom.ui.filter.FilterTrainFragment"
        android:label="@string/search_trains" >
        <argument
            android:name="intentRequestCode"
            app:argType="string"
            android:defaultValue="search"/>
        <argument
            android:name="categoryName"
...
