<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/half_padding"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:text="@string/do_you_want_to_delete"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/largeTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/confirm_delete_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/half_padding"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:contentDescription="@string/cd_cancel_deleting"
            app:layout_constraintBottom_toBottomOf="@id/confirm_delete_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/confirm_delete_btn"
            app:srcCompat="@drawable/ic_cancel" />

        <ImageButton
            android:id="@+id/confirm_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/half_margin"
            android:contentDescription="@string/cd_confirm_deleting"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete_dark" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>