...
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:src="@drawable/link_symbol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/brand_item_train_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand_item_brandName" />

    <ImageView
        android:id="@+id/brand_item_train_icon"
        android:layout_width="@dimen/brand_item_logo_dim"
        android:layout_height="@dimen/brand_item_logo_dim"
        app:layout_constraintEnd_toStartOf="@+id/brand_item_edit_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/brand_item_web_icon"
        app:layout_constraintTop_toTopOf="@+id/brand_item_web_icon"
        app:srcCompat="@drawable/ic_train_list_item" />

    <ImageView
...
